my_portfolio/business_site/style.css
/* ... */
      .fadeout{
        opacity:0;
      }


      .about .container h3.inEnglish{
        height: 7rem;
      }

      .pillar p.inEnglish{
            height: 20rem;
      }

    /*==========================================
    ===========================================
                      MOBILE RESPONSIVE STYLE                                  
    ===========================================
    ===========================================*/

@media(max-width: 1024px){
  .container{
    padding: 0 5%;
  }
  .navBar li a{
    font-size: 1.6vw;
    padding: 2.4rem 0.3vw;
  }
}









    @media(max-width:768px){

      .container{
        padding:0 20px;
      }
      .pillarContainer{
        flex-direction: column;
      }
      .pillar{
        width:100%;
        margin-bottom: 3rem;
      }

      .gridContainer{
        grid-template-columns: 50% 50%;
        grid-template-rows: auto;
        margin: 0 auto;
        width: 80%;
      }
      .pillar p{
        width: 63%;
        margin: 0 auto;
      }

      .sectionTitle p{
        letter-spacing: 0.2rem;
      }

      .container{
        padding: 0 9%;
      }

      .headLineContainer h4{
        left: 70%;
      }

      .row{
      flex-direction: column;
      }

      iframe{
        height: 50vh;
        width: 100%;
      }

      .textInfoContainer div{
        margin-bottom: 1rem;
      }
      footer{
        height: 11.5rem;
      }

      .whoAreWe .container{
          flex-direction: column;
      }

      .messageContainer{
            width: 80%;
            margin: 0 auto;
      }

      .imageContainer{
        width: 100%;
        margin: 2rem auto;
      }

      .navBar{
        display: none;
      }
      .hero{
        background-image:url(assets/images/compressedImages/Responsive/forMobile/blake-wisz-t366j3tQz94-unsplash.jpg) ;
        padding-top: 56vh;
        padding-left: 8vh;
      }


      p.message{
        font-size: 1.7rem;
      }

      span.break{
        display: block;
      }

  .hamburgerMenu{
    display: block;
    color: white;
    font-size: 2.5rem;
    height: 100%;
    
}

.hamburgerMenu a{
  color: white;
    text-decoration: none;
    display: block;
    height: 100%;
    line-height: 13vh;
    
    position: absolute;
    top: 0;
    right: 0;
    transition: all 0.25s ease;
    
    padding: 0 2rem;
}

.hamburgerMenu a:hover{
  background-color: #854918;
}

.modalWindow{
  /* display: none;    it breaks animation*/ 
  display: flex;
  opacity: 0;
  visibility: hidden;
  position: fixed;
  top: 0;
  right: 0;
  height: 100vh;
  width: 18vw;
  background: #854918;
  flex-direction: column;
  align-items: center;
  justify-content: flex-start;
/* animation:slideIn 0.25s ease-out ; */
transition: transform 0.25s ease-out,
                    opacity 0.25s ,
                    visibility 0.25s;
                      
                
}
.modalWindow.shown{
  /* display: flex; */
  opacity: 1;
  visibility: visible;
  transform: translateX(0);
  /* animation:slideIn 0.25s ease-out ; */
}



@keyframes slideIn{
0%{transform:translateX(12vw);}

100%{transform: translateX(0);}

}

.modalWindow.closing{
/* animation: slideOut 0.25s linear; */
transform: translateX(12vw);
visibility: hidden;
opacity: 0;
}

@keyframes slideOut{
0%{transform:translateX(0);}

100%{transform: translateX(12vw);}

}


.modalWindow ul{
  list-style: none;
  width: 100%;
}

.modalWindow ul li{
height: 6vw;
}

.modalWindow ul li a{
  text-decoration: none;
  color: white;
  display: block;
  width: 100%;
  height: 6vw;
  padding-left: 25%;
  font-size: 2.3vw;
  line-height: 6vw;
}

.modalWindow ul li a:hover{
  background-color: #a75c1e;
}

header{
  z-index:6;
}

.closeButton {
    width: 100%;
    height: 13vh;
    color: white;
    font-size: 2rem;
}

.closeButton a{
  width: 100%;
  height: 100%;
  display: block;
  text-align: center;
  line-height: 13vh;
  text-decoration: none;
  color: white;
}

.closeButton a:hover{
  background-color: #a75c1e;
}

.middle{
      line-height: 1.5rem;
      font-size: 1rem;
}

    .pillar p {
        width: 80%;
    }

    footer .container p {
    line-height: 1.7rem;
    font-size: 2.5vw;
    letter-spacing: 0.1vw;
}

.messageContainer p {
    letter-spacing: 0.65vw;
    line-height: 5.5vw;
}

.imageContainer img {
    height: 50vw;
}

.messageContainer h2{
  padding-top: 1rem;
  line-height: 6.4vw;
}

.about .container h3{
    text-align: center;
    
}

.articleContainer{
    height: auto;
}

.articleContainer h3{
  line-height: auto;
}

.articleContainer p{
      margin: 1.6rem 10%;
    width: 6vw;
}

    }
/* ... */

